# rust_web

chapter1/minimal-tcp/: Cargo.toml
chapter1/minimal-tcp/src/: main.rs
chapter1/minimal-warp/: Cargo.toml
chapter1/minimal-warp/src/: main.rs
chapter1/minimal_reqwest/: Cargo.toml
chapter1/minimal_reqwest/src/: main.rs
chapter2/question/: Cargo.toml
chapter2/question/src/: main.rs
chapter3/question/: Cargo.toml
chapter3/question/src/: main.rs
chapter4/example1/: Cargo.toml
chapter4/example1/src/: main.rs
chapter4/example2/: Cargo.toml
chapter4/example2/src/: main.rs
chapter5/example/: Cargo.toml
chapter5/example/handle-errors/src/: lib.rs
chapter5/example/src/: main.rs  store.rs
chapter5/example/src/routes/: question.rs
chapter5/example/src/types/: answer.rs
chapter6/: Cargo.toml
chapter6/src/: main.rs  store.rs
chapter6/src/routes/: question.rs
